# audex

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09c7ee5e87c5_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  routes.py
backend/app/api/v1/endpoints/: __init__.py  ingestion.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: engine.py  session.py
backend/app/models/: __init__.py  batch.py
backend/app/pipelines/: __init__.py  models.py  ocr.py  vision.py
backend/app/repositories/: __init__.py  batches.py
backend/app/schemas/: ingestion.py
backend/app/services/: advanced_analyzer.py  batch_processor.py  events.py  metadata.py  ocr_engine.py  pipeline.py  report.py  report_summary.py  scoring.py  storage.py  store.py  vision_engine.py  vision_rules.py
backend/audex_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: evaluate_pipeline.py  warmup_easyocr.py
backend/tests/: __init__.py  test_advanced_analyzer.py  test_health.py  test_ingestion.py  test_ingestion_integration.py  test_pipeline.py  test_report.py  test_report_summary.py  test_report_summary_integration.py  test_scoring.py  test_vision_rules.py  test_yolo_engine.py
docs/: IA_Pipeline_Implementation.md  frontend_realtime_feedback_plan.md  pipeline_async_and_gemini_plan.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AnnexesPanel.tsx  BatchSection.tsx  ConnectionBanner.tsx  ObservationsPanel.tsx  ReportHero.tsx  StatsStrip.tsx  SummaryPanel.tsx  SyncControls.tsx  TimelinePanel.tsx  ToastProvider.tsx  UploadPanel.tsx
frontend/src/hooks/: useBatchEvents.ts  useBatchHydrator.ts  useBatchUploader.ts  useOnlineStatus.ts
frontend/src/services/: api.ts  batches.ts  db.ts  reports.ts
frontend/src/state/: useBatchesStore.ts
infrastructure/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
test_audex_dataset/logs/: logs_acces_saheltech.csv
test_audex_dataset/notes/: notes_audit_saheltech.txt
(+3 files in other folders)
