[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audex-backend"
version = "0.1.0"
description = "FastAPI backend for the AUDEX MVP."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "AUDEX Team"}
]
dependencies = [
  "fastapi>=0.111,<0.112",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "python-multipart>=0.0.7,<0.0.8",
  "httpx>=0.27,<0.28",
  "Pillow>=10.4,<11.0",
  "reportlab>=4.2,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "ruff>=0.4.2,<0.5"
]

[tool.setuptools.packages.find]
include = ["app*"]
